# monty_lab

./: .gitignore  LICENSE  README.md  environment.yml  frequency_of_ops.csv  run_experiments.sh  summary
floppy/: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  run_flop_counter.py  run_static_analysis.py
floppy/.github/workflows/: docs.yml
floppy/docs/: contributing.md  index.md
floppy/docs/user_guide/: flop_counting.md  getting_started.md  static_analysis.md
floppy/frameworks/: run.py
floppy/frameworks/models/: evidence_matching.py  goal_state_generation.py
floppy/scripts/: 00_sanity_check.py  00_static_analysis_check.py  01_read_perf_data_pretrain.py  01_read_perf_stat_data.py  01_read_raw_data.py  01_read_raw_data_inference.py  plot_flops_comparison.py
floppy/src/flop_analysis/visitors/: sklearn_visitor.py
floppy/src/floppy/analysis/: __init__.py  analyzer.py  exceptions.py
floppy/src/floppy/analysis/visitors/: base_visitor.py  numpy_visitor.py  scipy_visitor.py  sklearn_visitor.py
floppy/src/floppy/counting/: counter.py  logger.py  registry.py  tracer.py
floppy/src/floppy/counting/base/: __init__.py  flop_counter.py  tracked_array.py
floppy/src/floppy/counting/core/: flop_counter.py  protocols.py  tracked_array.py
floppy/src/floppy/counting/operations/: __init__.py  (+9 more)
floppy/tests/: test_add.py  test_arccosine.py  test_arctangent.py  test_cosine.py  test_cross.py  test_dot.py  test_linalg.py  test_minmax.py  test_sum.py
floppy/tests/analysis/: test_analyzer.py  test_numpy_visitor.py  test_scipy_visitor.py  test_sklearn_visitor.py
(+566 files in other folders)
